tests/compile-fail/socket-thread-unsafe.stderr
error[E0277]: `*mut c_void` cannot be shared between threads safely
   --> tests/compile-fail/socket-thread-unsafe.rs:13:13
    |
13  |     let t = thread::spawn(move || {
    |             ^^^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
    |
    = help: within `Socket`, the trait `Sync` is not implemented for `*mut c_void`
    = note: required because it appears within the type `Socket`
    = note: required because of the requirements on the impl of `Send` for `&Socket`
    = note: required because it appears within the type `[closure@$DIR/tests/compile-fail/socket-thread-unsafe.rs:13:27: 15:6]`
note: required by a bound in `spawn`
